--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "object-path": "^0.11.5",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-scripts": "3.4.3"
