--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "object-path": "^0.11.5",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
