--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immer": "^8.0.1",
     "object-path": "^0.11.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
